--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,10 +1,33 @@
 <section class="section">
     <div class="container">
         <div class="columns is-centered">
-            <div class="column">
-                <div class="box">
-                    <%=  render 'form' %>
-                </div>
+            <div class="column box is-6">
+                    <%= form_with url: flights_path, method: :get do |form| %>
+                        <div class="field">
+                            <%= label_tag 'departure_code', 'Departure', class: 'label' %>
+                            <div class="control">
+                                <div class="select is-medium">
+                                    <%= form.collection_select :departure_code, @airports, :id, :code %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <%= label_tag 'arrival_code', 'Arrival', class: 'label' %>
+                            <div class="control">
+                                <div class="select is-medium">
+                                    <%= form.collection_select :arrival_code, @airports, :id, :code %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <%= label_tag 'num_tickets', 'Passengers', class: 'label' %>
+                            <div class="control">
+                                <div class="select is-medium">
+                                    <%= form.select :num_tickets, (1..4) %>
+                                </div>
+                            </div>
+                        </div>
+                    <% end %>
             </div>
         </div>
     </div>
