--- a/app/views/flights/_result.html.erb
+++ b/app/views/flights/_result.html.erb
@@ -1,7 +1,16 @@
 <%= form_with url: new_booking_path , method: :get do |f| %>
-    <div class="control">
-        <%= f.hidden_field :num_tickets, value: params[:num_tickets] %>
-        <%= f.radio_button :flight_id, flight.id %>
-        <%= f.label 'flight_id', flight.id, class:'radio' %>
+    <div class="field">
+        <div class="control">
+            <div class="level">
+                <div class="level-left">
+                    <%= f.hidden_field :num_tickets, value: params[:num_tickets] %>
+                    <%= f.radio_button :flight_id, flight.id, class: 'level-item' %>
+                    <%= f.label 'flight_id', "Flight Number: #{flight.id}", class:'radio' %>
+                </div>
+                <div class="level-right">
+                    <%= f.submit :book, class: 'button is-success is-medium'%>
+                </div>
+            </div>
+        </div>
     </div>
 <% end %>
