Setup email views

--- a/app/views/passenger_mailer/success_email.html.erb
+++ b/app/views/passenger_mailer/success_email.html.erb
@@ -4,14 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.name %></h1>
+    <h1>Welcome to Flight Booker, <%= @passenger.name %></h1>
     <p>
-      You have successfully signed up to example.com,
-      your username is: <%= @user.login %>.<br>
+      You have successfully booked a flight !
+      your booking id is : <%= @passenger.booking_id %>.<br>
     </p>
-    <p>
-      To login to the site, just follow this link: <%= @url %>.
-    </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p> Have a great day!</p>
   </body>
 </html>
