--- a/app/views/passenger_mailer/success_email.txt.erb
+++ b/app/views/passenger_mailer/success_email.txt.erb
@@ -1,9 +1,7 @@
-Welcome to example.com, <%= @user.name %>
+Welcome to example.com, <%= @passenger.name %>
 ===============================================
 
-You have successfully signed up to example.com,
-your username is: <%= @user.login %>.
-
-To login to the site, just follow this link: <%= @url %>.
+You have successfully booked a flight !
+You're booking id is : <%= @passenger.booking_id %>.
 
 Thanks for joining and have a great day!
