Remove redundant defaults

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -8,7 +8,7 @@
                             <%= label_tag 'departure_code', 'Departure', class: 'label' %>
                             <div class="control">
                                 <div class="select is-medium is-fullwidth">
-                                    <%= form.collection_select :departure_code, @airports, :id, :code, selected: params[:departure_code] || 2  %>
+                                    <%= form.collection_select :departure_code, @airports, :id, :code, selected: params[:departure_code] %>
                                 </div>
                             </div>
                         </div>
@@ -16,7 +16,7 @@
                             <%= label_tag 'arrival_code', 'Arrival', class: 'label' %>
                             <div class="control">
                                 <div class="select is-medium is-fullwidth">
-                                    <%= form.collection_select :arrival_code, @airports, :id, :code, selected: params[:arrival_code] || 1 %>
+                                    <%= form.collection_select :arrival_code, @airports, :id, :code, selected: params[:arrival_code] %>
                                 </div>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
                             <%= label_tag 'month', 'Available Months', class: 'label' %>
                             <div class="control">
                                 <div class="select is-medium is-fullwidth">
-                                    <%= select_tag 'month', options_for_select(@months, selected: params[:month] || 4 ) %>
+                                    <%= select_tag 'month', options_for_select(@months, selected: params[:month]) %>
                                 </div>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                             <%= label_tag 'year', 'Available Years', class: 'label' %>
                             <div class="control">
                                 <div class="select is-medium is-fullwidth">
-                                    <%= select_tag 'year', options_for_select(@years, selected: params[:year] || 2022 ) %>
+                                    <%= select_tag 'year', options_for_select(@years, selected: params[:year]) %>
                                 </div>
                             </div>
                         </div>
